2011-04-29  Ulrich Drepper  <drepper@gmail.com>

	* grp/initgroups.c (internal_getgrouplist): Prefer initgroups setting
	to groups setting in database lookup.
	* nss/nsswitch.conf: Add initgroups entry.

2011-04-22  Ulrich Drepper  <drepper@gmail.com>

	[BZ #12685]
	* libio/fileops.c (_IO_new_file_fopen): Scan up to 7 bytes of the
	mode string.
	Patch by Eric Blake <eblake@redhat.com>.

2011-04-20  H.J. Lu  <hongjiu.lu@intel.com>

	* sunrpc/Makefile (need-export-routines): Add svc_run.
	(routines): Remove svc_run.
	($(objpfx)thrsvc): Add $(common-objpfx)linkobj/libc.so.
	* sunrpc/clnt_perr.c (clnt_perrno): Export.
	* sunrpc/svc_run.c (svc_run): Likewise.
	* sunrpc/svc_udp.c (svcudp_create): Likewise.

2011-04-21  Ulrich Drepper  <drepper@gmail.com>

	* nss/nss_files/files-initgroups.c (_nss_files_initgroups_dyn): Fix
	problem in reallocation in last patch.

2011-04-20  Ulrich Drepper  <drepper@gmail.com>

	* sunrpc/Makefile: Move inclusion of Rules.

2011-04-19  Ulrich Drepper  <drepper@gmail.com>

	* nss/nss_files/files-initgroups.c: New file.
	* nss/Makefile (libnss_files-routines): Add files-initgroups.
	* nss/Versions (libnss_files) [GLIBC_PRIVATE]: Export
	_nss_files_initgroups_dyn.

2011-03-31  Richard Sandiford  <richard.sandiford@linaro.org>

	* elf/elf.h (R_ARM_IRELATIVE): Define.

2011-04-19  Ulrich Drepper  <drepper@gmail.com>

	* po/ru.po: Update from translation team.

2011-04-17  Ulrich Drepper  <drepper@gmail.com>

	* sunrpc/Makefile ($(rpc-compat-routines.os)): Add before-compile to
	dependencies.

2011-02-06  Mike Frysinger  <vapier@gentoo.org>

	[BZ #12653]
	* sysdeps/i386/i686/multiarch/memcpy-ssse3-rep.S: Only protect
	MEMCPY_CHK with USE_AS_BCOPY ifdef check.
	* sysdeps/i386/i686/multiarch/memcpy-ssse3.S: Likewise.
	* sysdeps/x86_64/multiarch/memcpy-ssse3.S: Likewise.
	* sysdeps/x86_64/multiarch/memcpy-ssse3-back.S: Likewise.

2011-03-28  Andreas Schwab  <schwab@linux-m68k.org>

	* sysdeps/powerpc/powerpc32/power4/strncmp.S: Don't read past